#875 - Model cache invalidation may generate duplicate events